--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -4,22 +4,26 @@
   - Tagify
   - General
   - Footer
+  ------------------
+  border-colors: #cecece
 */
 /* =============================================================================
    Header css
    ========================================================================== */
+.pfLogoDiv {
+  float: left;
+  position: relative;
+  max-width: 120px;
+  width: 100%;
+  padding: 20px;
+}
+
 .pfLogo {
-  /* border-radius: 50%; */
-  /* width: 100%;
-  max-width:100px; */
   z-index: 1;
   position: relative;
-  /* -webkit-transition: -webkit-transform .8s ease-in-out;
-          transition:         transform .8s ease-in-out; */
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   left: 0;
-  /* transition: left ease 0.5s; */
 }
 
 .pfLogo:hover {
@@ -47,14 +51,6 @@
   left: 10px;
 }
 
-.pfLogoDiv {
-  float: left;
-  position: relative;
-  max-width: 120px;
-  width: 100%;
-  padding: 20px;
-}
-
 /* =============================================================================
    Project Tiles css
    ========================================================================== */
@@ -65,13 +61,13 @@
 }
 
 .pfProject {
-  min-width: 300px;
+  min-width: 100px;
   /* display:inline-block; */
   margin: 5px;
   padding: 10px;
-  width: calc(100%/3 - 10px);
-  height: 40px;
-  border: 2px solid #333;
+  width: calc(100%/4 - 10px);
+  height: 400px;
+  border: 2px solid #cecece;
   background-color: white;
 }
 
@@ -90,7 +86,8 @@
 .tagify__input--outside {
   display: block;
   max-width: 600px;
-  border: 1px solid #DDD;
+  border: 2px solid #cecece;
+  border-radius: 5px;
   margin-top: 1.5em;
   margin-bottom: 1em;
 }
@@ -112,19 +109,21 @@
 }
 
 .tagify tag>div {
-  background-color: #D2F4FE;
-  border-radius: 15px;
+  background-color: #d3e2e2;
+  border-radius: 5px;
   font-weight: 600;
   display: flex;
   align-items: center;
 }
 
 .tagify tag:hover div {
-  background-color: #d3e2e2;
+  background-color: #D2F4FE;
+  --tag-hover: #D2F4FE;
 }
 
 .tagify tag x:hover+div {
-  background-color: rgba(211, 148, 148, 0.3);
+  background-color: rgba(211, 148, 148, 0.1);
+
 }
 
 /* =============================================================================
@@ -153,6 +152,10 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.spacer30 {height:30px;width:100%;display:block;clear:both;}
+.spacer40 {height:40px;width:100%;display:block;clear:both;}
+.spacer50 {height:50px;width:100%;display:block;clear:both;}
 
 /* =============================================================================
    Sticky Footer css
