--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -30,6 +30,9 @@
   -webkit-transform: rotate(110deg);
   transform: rotate(110deg);
   left: 60px;
+
+  -webkit-filter: drop-shadow( 0px 0px 3px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 0px 0px 3px rgba(0, 0, 0, .7));
 }
 
 .pfMe {
@@ -49,6 +52,27 @@
   -webkit-transform: rotate(-30deg);
   transform: rotate(-30deg);
   left: 10px;
+
+  -webkit-filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
+}
+
+/* =============================================================================
+   Text + image
+   ========================================================================== */
+.pfHeadImage{
+  display:inline-block;
+  width:30%;
+  height:200px;
+  background-color: #333;
+  float:left;
+}
+.pfStatement{
+  display:inline-block;
+  float:left;
+  width:60%;
+  height:200px;
+
 }
 
 /* =============================================================================
@@ -71,16 +95,91 @@
   background-color: white;
 }
 
+.pfThumbnail {
+  padding:10px;
+  height:50%;
+  background-color: #333;
+}
+.pfText {
+  padding:10px;
+  height:50%;
+  background-color: #222;
+}
+.pfTitle {
+  position:absolute;
+  top:10px;
+  right:10px;
+  padding:10px;
+  max-height:190px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color:white;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+}
+
+/* Grow */
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  z-index: 1;
+}
+
+.hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  z-index: 1;
+}
+
+/* Shadow */
+.hvr-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+.hvr-shadow:hover, .hvr-shadow:focus, .hvr-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+}
+
 /* =============================================================================
    Tagify css
    ========================================================================== */
 .tagify--outside {
   border: 0;
   padding: 0;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   width: 100%;
-  max-width: 320px;
+  max-width: 600px;
 }
 
 .tagify__input--outside {
@@ -90,6 +189,8 @@
   border-radius: 5px;
   margin-top: 1.5em;
   margin-bottom: 1em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .tagify tag {
@@ -125,14 +226,18 @@
   background-color: rgba(211, 148, 148, 0.1);
 
 }
+input {
+  display:block;
+  margin:0 auto;
+}
 
 /* =============================================================================
    General css
    Credit: https://foundation.zurb.com/forum/posts/53901-foundation-6-sticky-footer-pushed-down-with-off-canvas-and-flexbox-css-tutorial
    ========================================================================== */
-   .grid-y.medium-grid-frame{
-     overflow:visible !important;
-   }
+ .grid-y.medium-grid-frame{
+   overflow:visible !important;
+ }
 .horiLine {
   display: block;
   height: 1px;
