--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -18,6 +18,8 @@
   padding: 20px;
 }
 
+/* -------------------------------------------------------------------------- */
+/*
 .pfLogo {
   z-index: 1;
   position: relative;
@@ -40,22 +42,80 @@
   position: absolute;
   top: 10px;
   left: 30px;
-  /* the time below needs to be 5/8 of the pfLogo transition time */
+  /* the time below needs to be 5/8 of the pfLogo transition time
   -webkit-transition: .3125s ease-in-out;
   transition: .3125s ease-in-out;
 }
 
 .pfLogo:hover~.pfMe {
-  /* the time below needs to be 3/8 of the pfLogo transition time */
+  /* the time below needs to be 3/8 of the pfLogo transition time
   transition-delay: 0.1875s;
   visibility: visible;
   -webkit-transform: rotate(-30deg);
   transform: rotate(-30deg);
   left: 10px;
+  -webkit-filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
+} */
 
+/* -------------------------------------------------------------------------- */
+
+.pfLogo {
+  z-index: 1;
+  position: relative;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  /* left: 0; */
+}
+
+.pfLogoDiv:hover .pfLogo{
+  /* -webkit-transform: rotate(240deg); */
+  transform: rotate(240deg);
+  transform-origin: 40px 78px;
+  /* transform-style: preserve-3D; */
+
+  -webkit-filter: drop-shadow( 0px 0px 3px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 0px 0px 3px rgba(0, 0, 0, .7));
+}
+
+.pfMe {
+  /* visibility: hidden; */
+  visibility: visible;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.pfMe2 {
+  visibility: visible;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+.pfLogoDiv:hover .pfMe {
+  /* the time below needs to be 3/8 of the pfLogo transition time */
+  /* transition-delay: 0.1875s; */
+  visibility: visible;
+  /* -webkit-transform: rotate(-30deg);
+  transform: rotate(-30deg); */
+  /* left: 10px; */
+}
+.pfLogoDiv:hover .pfMe2 {
+  /* the time below needs to be 3/8 of the pfLogo transition time */
+  /* transition-delay: 0.1875s; */
+  visibility: visible;
+  /* -webkit-transform: rotate(-30deg);
+  transform: rotate(-30deg); */
+  /* left: 10px; */
+  transform: rotate(120deg);
+  transform-origin: 50px 88px;
   -webkit-filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
   filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
 }
+
+
 
 /* =============================================================================
    Header Text + image
