--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -91,6 +91,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
+  width:100px;
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
 }
@@ -156,25 +157,43 @@
   background-color: white;
 }
 
+/* https://w3bits.com/css-image-hover-zoom/ */
 .pfThumbnail {
-  padding:10px;
-  height:50%;
+  /* padding:10px; */
+  height:60%;
   background-color: #333;
+  overflow:hidden;
 }
+.pfThumbnail img{
+  /* overflow: hidden; */
+  transition: transform .25s ease;
+  max-width: 100%;
+  float:right;
+}
+.pfProject:hover img {
+  transform: scale(1.3);
+}
+
 .pfText {
   padding:10px;
-  height:50%;
-  background-color: #222;
+  height:40%;
+  /* background-color: #222; */
+}
+
+.pfTitleInput {
+  z-index: 1;
+  position:absolute;
+  width: calc(100% - 20px);
 }
 
 .pfTitle {
-  max-height:190px;
-  background-color: rgba(0, 0, 0, 0.3);
+  max-height:225.6px;
+  background-color: rgba(0, 0, 0, 0.6);
   color:white;
   writing-mode: vertical-rl;
   text-orientation: upright;
   letter-spacing: -2px;
-  float:right;
+  float:left;
 }
 .pfTitleAlone {
   padding:10px;
