--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -18,6 +18,7 @@
   max-width: 120px;
   width: 100%;
   padding: 20px;
+  z-index: 6;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -118,8 +119,48 @@
   filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
 }
 
+/* =============================================================================
+   Fixed banner
+   ========================================================================== */
 
+#menu {
+   /* left: 0;
+   background-color: red; */
+   width: 100%;
+   z-index: 6;
+}
 
+#menu.bottom {
+   position: absolute;
+   top: 220px;
+}
+
+#menu.top {
+   position: fixed;
+   top: 90px;
+}
+
+#whiteTop {
+  position: absolute;
+  height: 170px;
+  width:100%;
+  background-color: white;
+  /* background: linear-gradient(to bottom, white 80%, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); */
+  z-index: 5;
+}
+#whiteTop.bottom {
+   position: absolute;
+   top: 0;
+   transition-duration: 0.5s;
+}
+#whiteTop.top {
+  position: fixed;
+  top: 0;
+  transition-duration: 0.5s;
+}
+#whiteTop.shadow {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+}
 /* =============================================================================
    Header Text + image
    ========================================================================== */
@@ -137,6 +178,16 @@
   height:170px;
   /* text-align:center; */
   /* margin:0 auto; */
+  position:absolute;
+  z-index:5;
+}
+.pfStatement.bottom {
+   position: absolute;
+   top: 55px;
+}
+.pfStatement.top {
+  position: fixed;
+  top: 30px;
 }
 
 /* =============================================================================
@@ -263,6 +314,78 @@
 }
 
 /* =============================================================================
+   Button css
+   ========================================================================== */
+   @import url(https://fonts.googleapis.com/css?family=Ubuntu:700&subset=latin,latin-ext);
+   body {
+     /* background: url("http://thecodeplayer.com/uploads/media/geometry.png"); */
+     font-family: 'Ubuntu', sans-serif;
+   }
+
+   a {
+     text-decoration: none;
+     color: #4f4f4f;
+   }
+
+   .filterButton-container {
+     padding: 10px 10px 10px 0;
+     display: inline;
+     /* text-align: center; */
+   }
+
+   .filterButton {
+     display: inline-block;
+     padding: 12px 24px;
+     border: 1px solid #4f4f4f;
+     border-radius: 4px;
+     transition: all 0.2s ease-in;
+     position: relative;
+     overflow: hidden;
+   }
+   .filterButton:before {
+     content: "";
+     position: absolute;
+     left: 50%;
+     transform: translateX(-50%) scaleY(1) scaleX(1.25);
+     top: 100%;
+     width: 140%;
+     height: 180%;
+     background-color: rgba(0, 0, 0, 0.05);
+     border-radius: 50%;
+     display: block;
+     transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+     z-index: -1;
+   }
+   .filterButton:after {
+     content: "";
+     position: absolute;
+     left: 55%;
+     transform: translateX(-50%) scaleY(1) scaleX(1.45);
+     top: 180%;
+     width: 160%;
+     height: 190%;
+     background-color: #39bda7;
+     border-radius: 50%;
+     display: block;
+     transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+     z-index: -1;
+   }
+   .filterButton:hover {
+     color: #ffffff;
+     border: 1px solid #39bda7;
+   }
+   .filterButton:hover:before {
+     top: -35%;
+     background-color: #39bda7;
+     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
+   .filterButton:hover:after {
+     top: -45%;
+     background-color: #39bda7;
+     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
+
+/* =============================================================================
    Tagify css
    ========================================================================== */
 .tagify--outside {
@@ -354,12 +477,16 @@ input {
   flex-wrap: wrap;
   justify-content: center; */
 }
-
+.spacer10 {height:0;width:100%;display:block;clear:both;}
 .spacer10 {height:10px;width:100%;display:block;clear:both;}
 .spacer20 {height:20px;width:100%;display:block;clear:both;}
 .spacer30 {height:30px;width:100%;display:block;clear:both;}
 .spacer40 {height:40px;width:100%;display:block;clear:both;}
 .spacer50 {height:50px;width:100%;display:block;clear:both;}
+.spacer60 {height:60px;width:100%;display:block;clear:both;}
+.spacer70 {height:70px;width:100%;display:block;clear:both;}
+.spacer80 {height:80px;width:100%;display:block;clear:both;}
+.spacer220 {height:220px;width:100%;display:block;clear:both;}
 
 /* =============================================================================
    Sticky Footer css
