--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -532,13 +532,19 @@ main {
    	margin: 0px 10px 30px 20px;
    	padding: 10px;
    	width: calc(100%/4 - 10px);
-   	height: 290px;
+   	height: 312px;
    	border: 2px solid #cecece;
    	background-color: white;
    	max-width: 295px;
    	border-radius: 4px;
    	border: 1px solid #e3e3e3;
    }
+   .pfThumbnail {
+    	/* padding: 10px; */
+    	height: 200px;
+    	/* background-color: #333; */
+    	overflow: hidden;
+    }
 
 .pfTitleAlone {
  	padding: 9px 3px;
@@ -546,12 +552,12 @@ main {
  }
 
  .pfText {
- 	padding: 27px 10px 0px 7px;
- 	/* height: 40%; */
- 	/* background-color: #222; */
- 	line-height: 17px;
- 	color: #393939;
- 	font-size: 13px;
+   padding: 15px 10px 0px 7px;
+   /* height: 40%; */
+   /* background-color: #222; */
+   line-height: 17px;
+   color: #393939;
+   font-size: 13px;
  }
 
  .pfTitle {
