--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -337,9 +337,9 @@ body {
      font-family: 'Ubuntu', sans-serif;
    }
 
-   a {
+   a, a:focus,a:hover,a:visited  {
      text-decoration: none;
-     color: #4f4f4f;
+     color: #afe0cb;
    }
 
    .filterButton-container {
@@ -351,7 +351,7 @@ body {
    .filterButton {
      display: inline-block;
      padding: 12px 24px;
-     border: 1px solid #4f4f4f;
+     border: 1px solid #afe0cb;
      border-radius: 4px;
      transition: all 0.2s ease-in;
      position: relative;
@@ -398,6 +398,12 @@ body {
      top: -45%;
      background-color: #39bda7;
      transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
+
+   .itsOn {
+     color: #ffffff !important;
+     border: 1px solid #39bda7 !important;
+     background-color: #39bda7;
    }
 
 /* =============================================================================
@@ -609,9 +615,7 @@ body .tagify__input--outside {
 	/* margin-right: auto; */
 }
 
-.itsOn {
-  top:5px;
-}
+
 
 /* ---------------------- */
 /* - - Subpage Styles - - */
