--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -28,6 +28,12 @@ body {
   padding:0px;
 }
 
+* { box-sizing:border-box; }
+
+h1, h2, h3, h4, h5, h6, p {
+  text-align:left;
+}
+
 /* -------------------------------------------------------------------------- */
 /*
 .pfLogo {
@@ -632,48 +638,135 @@ body .tagify__input--outside {
   background-repeat:no-repeat;
   background-position: 0 0;
   background-size:cover;
-  margin-bottom:30px;
 }
 
 .newRow {
   max-width:1000px;
+  width:100%;
   margin:0px auto;
   padding-bottom:30px;
   clear:both;
   position:relative;
 }
 
+.subpageHeader a {
+	width: 75px;
+	height: 50px;
+	position: absolute;
+	left: 30px;
+	top: 30px;
+	border: 3px solid #7ec81a;
+}
+
+.subpageHeader a img {
+	max-width: 24px;
+	position: absolute;
+	left: 24px;
+	top: 10px;
+  transition:left 0.3s ease-in-out;
+}
+
+.subpageHeader a:hover img {
+	max-width: 24px;
+	position: absolute;
+	left: 10px;
+	top: 10px;
+  transition:left 0.3s ease-in-out;
+}
+
 /* - Subheading - */
 
 .subheadContent {
-  position:absolute;
-  left:0px;
-  top:-40px;
+  margin-bottom:45px;
 }
 
 .subheadContent h1 {
-  font-size:40px;
-  margin-bottom:10px;
-  background-color:#FFF;
-  padding:15px 20px 18px 25px;
+	font-size: 40px;
+	margin-bottom: 10px;
+	background-color: #FFF;
+	padding: 20px 25px 18px 25px;
+	margin-left: -25px;
+	display: inline-block;
+	clear: both;
+}
+
+.subheadContent {
+	margin-top: -70px;
 }
 
 .subheadContent h2 {
-  font-style:italic;
-  color:#a0a0a0;
-  font-size:18px;
-  line-height:21px;
+	font-style: italic;
+	color: #63b913;
+	font-size: 17px;
+	line-height: 21px;
+	font-weight: 300;
+	max-width: 650px;
+	margin: 0px;
 }
 
 /* - Content Rows - */
 
+.contentRow {
+  margin-bottom:40px;
+}
 
+.contentBlock h4 {
+  font-size:18px;
+  margin:0px 0px 20px;
+  position:relative;
+  padding-top:40px;
+}
 
+.contentBlock h4::after {
+	content: '';
+	position: absolute;
+	left: 0px;
+	bottom: -11px;
+	width: 35px;
+	height: 2px;
+	background-color: #82ca0c;
+}
 
+.contentBlock {
+  max-width:650px;
+  float:left;
+  margin-right:30px;
+}
 
+.contentBlock p {
+	font-size: 14px;
+	color: #5b5b5b;
+	max-width: 450px;
+	font-weight: 300;
+	line-height: 18px;
+}
 
+.subContent .newRow img {
+	width: 100%;
+  float:right;
+	max-width: 360px;
+	border: 6px solid #FFF;
+	box-shadow: 0px 0px 5px #e1e1e1;
+	border-radius: 3px;
+}
 
+.subContent > div:nth-child(2n) .contentBlock {
+  float:right;
+  margin-right:0px;
+  margin-left:30px;
+}
 
+.subContent > div:nth-child(2n) img {
+  float:left;
+}
+
+.text-center {
+  text-align:center;
+}
+
+.inline-block {
+  display:inline-block;
+}
 
 
 
