--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -661,11 +661,12 @@ body .tagify__input--outside {
 }
 
 .subpageHeader {
-  height:350px;
-  background-image:url('../assets/images/example_bg.png');
-  background-repeat:no-repeat;
-  background-position: 0 0;
-  background-size:cover;
+	height: 170px;
+	background-image: none;
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	background-size: cover;
+	background-color: #bed8ee;
 }
 
 .newRow {
@@ -678,58 +679,57 @@ body .tagify__input--outside {
 }
 
 .subpageHeader a {
-	width: 75px;
-	height: 50px;
+	width: 70px;
+	height: 45px;
 	position: absolute;
 	left: 30px;
 	top: 30px;
-	border: 3px solid #7ec81a;
+	border: 2px solid #fff;
 }
 
 .subpageHeader a img {
-	max-width: 24px;
+	max-width: 21px;
 	position: absolute;
-	left: 24px;
+	left: 25px;
 	top: 10px;
-  transition:left 0.3s ease-in-out;
+	transition: left 0.3s ease-in-out;
 }
 
 .subpageHeader a:hover img {
-	max-width: 24px;
-	position: absolute;
 	left: 10px;
-	top: 10px;
   transition:left 0.3s ease-in-out;
 }
 
 /* - Subheading - */
 
 .subheadContent {
-  margin-bottom:45px;
+	margin-bottom: 25px;
 }
 
 .subheadContent h1 {
-	font-size: 40px;
-	margin-bottom: 10px;
-	background-color: #FFF;
-	padding: 20px 25px 18px 25px;
-	margin-left: -25px;
+	font-size: 30px;
+	background-color: #00284B;
+	padding: 14px 25px 10px 22px;
+	margin-left: -22px;
 	display: inline-block;
 	clear: both;
+	color: #FFF;
 }
 
 .subheadContent {
-	margin-top: -70px;
+	margin-top: -58px;
 }
 
 .subheadContent h2 {
 	font-style: italic;
-	color: #63b913;
+	color: #103060;
 	font-size: 17px;
 	line-height: 21px;
 	font-weight: 300;
 	max-width: 650px;
 	margin: 0px;
+  /*- Hidden -*/
+  display:none;
 }
 
 /* - Content Rows - */
@@ -739,20 +739,20 @@ body .tagify__input--outside {
 }
 
 .contentBlock h4 {
-  font-size:18px;
-  margin:0px 0px 20px;
-  position:relative;
-  padding-top:40px;
+	font-size: 18px;
+	margin: 0px 0px 30px;
+	position: relative;
+	padding-top: 40px;
 }
 
 .contentBlock h4::after {
 	content: '';
 	position: absolute;
 	left: 0px;
-	bottom: -11px;
-	width: 35px;
+	bottom: -14px;
+	width: 40px;
 	height: 2px;
-	background-color: #82ca0c;
+	background-color: #000631;
 }
 
 .contentBlock {
@@ -771,10 +771,10 @@ body .tagify__input--outside {
 
 .subContent .newRow img {
 	width: 100%;
-  float:right;
-	max-width: 360px;
-	border: 6px solid #FFF;
-	box-shadow: 0px 0px 5px #e1e1e1;
+	float: right;
+	max-width: 400px;
+	border: 10px solid #FFF;
+	box-shadow: 0px 0px 0px 1px #d9d9d9;
 	border-radius: 3px;
 }
 
