--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -505,10 +505,12 @@ input {
   writing-mode: vertical-rl;
   margin-right: auto;
   margin-left: auto;
+  padding-left: 25px;
 }
 
 .centerContent {
-  margin-left: 19px;
+  /* margin-left: 19px; */
+  margin-left: 30px;
   /* width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -807,6 +809,10 @@ h4 {
   font-weight:900;
 }
 
+.grid-padding-x > .cell {
+	padding-right: .9375rem;
+	padding-left: 2.1rem;
+}
 
 
 /* - - */
