--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -360,7 +360,7 @@ h1, h2, h3, h4, h5, h6, p {
 
    .filterButton {
      display: inline-block;
-     padding: 12px 24px;
+     padding: 12px 20px;
      border: 1px solid #afe0cb;
      border-radius: 4px;
      transition: all 0.2s ease-in;
@@ -623,7 +623,7 @@ main {
 
 .filterButton {
 	display: inline-block;
-	padding: 9px 24px 7px;
+	padding: 9px 20px 7px;
 	border: 1px solid #b4eccc;
 	border-radius: 4px;
 	transition: all 0.2s ease-in;
@@ -878,6 +878,10 @@ h4 {
 
 @media (max-width:680px) {
 
+  body .tagify__input--outside {
+    width:91%;
+  }
+
   .shrink.header {
     z-index:999;
     position:relative;
@@ -939,6 +943,10 @@ h4 {
 @media (max-width:350px) {
   .filterButton {
     width:100%;
+  }
+
+  body .tagify__input--outside {
+    width:97%;
   }
 }
 
