--- a/mk2/css/style.css
+++ b/mk2/css/style.css
@@ -648,6 +648,13 @@ body .tagify__input--outside {
 	border-radius: 5px;
 }
 
+.vertiText {
+  color:#FFF;
+}
+
+footer .large-12 {
+  background-color:#1c1c1c;
+}
 
 
 
